--- a/index.html
+++ b/index.html
@@ -211,11 +211,13 @@
         </div>
 
         <div class="contact-form" data-aos="zoom-in">
-            <form action="">
-                <input type="text" placeholder="Tu nombre" required>
-                <input type="email" placeholder="Correo electronico.." required>
-                <textarea name="" id="" cols="30" rows="10" placeholder="Tu mensaje" required></textarea>
+            <form action="https://formsubmit.co/joaquinfc357@gmail.com" method="POST">
+                <input type="text" name="name" id="name" placeholder="Tu nombre" required>
+                <input type="email" name="email" id="email" placeholder="Correo electronico.." required>
+                <textarea name="coments" id="coments" cols="30" rows="10" placeholder="Tu mensaje" required></textarea>
                 <input type="submit" name="" value="Enviar mensaje" class="send-btn">
+                <input type="hidden" name="_next" value="https://joaquincc.github.io/Portafolio-Joaquin/">
+                <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
      </section>
