--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>Dev JC</title>
     <link rel="stylesheet" href="style/style.css">
     <!-- box icon - link -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -58,7 +58,7 @@
 
      <section class="about" id="about">
         <div class="about-img" data-aos="zoom-in-down">
-            <img src="img/prueba1.png" alt="#">
+            <img src="img/about.jpg" alt="#">
         </div>
         <div class="about-text" data-aos="zoom-in-up">
             <h2>Soy <span>desarrollador</span> web</h2>
@@ -79,11 +79,11 @@
                 </p>
 
                 <p class="exp">
-                    Numero
-                    <span>991867752</span>
+                    Numero:
+                    <span>991 867 752</span>
                 </p>
 
-                <a href="#" class="btn">Ver Proyecto</a>
+                <a href="#portfolio" class="btn">Ver Proyecto</a>
             </div>
         </div>
      </section>
