--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#contact">Contacto</a></li>
         </ul>
         <div class="top-btnn">
-            <a href="#contact" class="h-btn">Contactame</a>
+            <a href="#contact" class="h-btn">Contáctame</a>
         </div>
      </header>
 
@@ -40,7 +40,7 @@
      <section class="hero" id="home">
         <div class="main-content" data-aos="fade-in" id="cadena-texto">
             <!-- <h4>HOLA</h4> -->
-            <h1>Hola soy <br> <span class="typed"></span></h1>
+            <h1>Hola, soy <br> <span class="typed"></span></h1>
             <p>Apasionado desarrollador web junior comprometido con el aprendizaje constante y la creación de experiencias digitales envolventes.</p>
             <div class="social">
                 <a href="https://www.linkedin.com/in/wjoaquincc/" target="_blank"><i class="ri-linkedin-fill"></i></a>
@@ -79,7 +79,7 @@
                 </p>
 
                 <p class="exp">
-                    Numero:
+                    Número:
                     <span>991 867 752</span>
                 </p>
 
@@ -207,7 +207,7 @@
      <!-- contacto -->
      <section class="contact" id="contact">
         <div class="center-text" data-aos="fade-down">
-            <h2>Contacta<span>me</span></h2>
+            <h2>Contácta<span>me</span></h2>
         </div>
 
         <div class="contact-form" data-aos="zoom-in">
