--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about">Acerca</a></li>
             <li><a href="#services">Servicios</a></li>
-            <li><a href="#portfolio">Portafolio</a></li>
+            <!-- <li><a href="#portfolio">Portafolio</a></li> -->
             <li><a href="#contact">Contacto</a></li>
         </ul>
         <div class="top-btnn">
@@ -118,7 +118,7 @@
 
      </section>
      <!-- portfolio -->
-     <section class="portfolio" id="portfolio">
+     <!-- <section class="portfolio" id="portfolio">
         <div class="center-text" data-aos="fade-down">
             <h2>Mi <span>Portafolio</span></h2>
         </div>
@@ -202,7 +202,7 @@
                 <h4>Desarrollo de una Web Ecomerce</h4>
             </div>
         </div>
-     </section>
+     </section> -->
 
      <!-- contacto -->
      <section class="contact" id="contact">
