--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about">Acerca</a></li>
             <li><a href="#services">Servicios</a></li>
-            <!-- <li><a href="#portfolio">Portafolio</a></li> -->
+            <li><a href="#portfolio">Portafolio</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul>
         <div class="top-btnn">
@@ -61,27 +61,23 @@
             <img src="img/about.jpg" alt="#">
         </div>
         <div class="about-text" data-aos="zoom-in-up">
-            <h2>Soy <span>desarrollador</span> web</h2>
+            <h2>Mi <span>experiencia</span></h2>
             <div class="exp-area">
                 <p class="exp">
-                    Experiencia:
-                    <span>1 año</span>
+                    Años de trabajo:
+                    <span>3 años</span>
                 </p>
 
                 <p class="exp">
-                    Lugar:
-                    <span>Lima, Peru</span>
+                    Proyecto completados:
+                    <span>20</span>
                 </p>
 
                 <p class="exp">
-                    Email:
-                    <span>joaquinfc357@gmail.com</span>
+                    Clientes satisfechos:
+                    <span>15</span>
                 </p>
-
-                <p class="exp">
-                    Número:
-                    <span>991 867 752</span>
-                </p>
+                <br>
 
                 <a href="#portfolio" class="btn">Ver Proyecto</a>
             </div>
@@ -118,7 +114,7 @@
 
      </section>
      <!-- portfolio -->
-     <!-- <section class="portfolio" id="portfolio">
+     <section class="portfolio" id="portfolio">
         <div class="center-text" data-aos="fade-down">
             <h2>Mi <span>Portafolio</span></h2>
         </div>
@@ -128,13 +124,15 @@
                 <img src="img/port-1.jpg" alt="#">
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Diseño Web</h5>
+                        <h5>Diseño Web - Tailwind</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <a href="https://joaquincc.github.io/Tailwind_web/" target="_blank">
+                            <i class="ri-github-fill"></i>
+                        </a>
                     </div>
                 </div>
-                <h4>Desarrollo de una Web Ecomerce</h4>
+                <h4>Desarrollo de una Landing Page</h4>
             </div>
 
             <div class="row">
@@ -202,7 +200,7 @@
                 <h4>Desarrollo de una Web Ecomerce</h4>
             </div>
         </div>
-     </section> -->
+     </section>
 
      <!-- contacto -->
      <section class="contact" id="contact">
